--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
